--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -3,7 +3,13 @@
   font-style: normal;
   font-weight: bold;
   font-size: 34px;
-  line-height: 40px;
+  color: #000000;
+}
+.es-subtitle-h1 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
   color: #000000;
 }
 
