--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -8,7 +8,7 @@ p {
 
 .as-navbar {
   border-bottom: 1px solid #e9e9e9; // as variable
-  padding: 0;
+  // padding: 0;
 }
 
 // FONT todo
@@ -29,5 +29,12 @@ p {
 //     line-height: 23px;
 //     color: #000000;
 // }
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #fff;
+}
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
