--- a/src/assets/style/_overrides.scss
+++ b/src/assets/style/_overrides.scss
@@ -138,3 +138,15 @@ $form-feedback-icon-invalid: none;
 .dropdown-item {
   white-space: normal;
 }
+
+.custom-select {
+  background-size: 1rem !important;
+  background: #fff url("../img/icons/dropdown.svg") right 0.75rem center/8px 10px no-repeat;
+}
+
+.custom-select:focus {
+  border-color: #000000;
+  outline: 0;
+  // box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
+  box-shadow: none !important;
+}
