--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -38,3 +38,31 @@ p {
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+@import "~pretty-checkbox/src/scss/variables";
+
+$pretty--color-default: orange;
+
+// lets customize the colors
+$pretty--colors: (
+  primary: #3f51b5,
+  info: #00bcd4,
+  success: #4caf50,
+  warning: $pretty--color-warning,
+  // default
+  danger: $pretty--color-danger //default,,,
+);
+
+// will add additional colors
+$browsers: (
+  twitter: #1da1f2,
+  facebook: #3b5998,
+  linkedin: #0077b5,
+  google-plus: #dd4b39,
+  reddit: #ff4500,
+  yellow: #ffe600,
+);
+
+$pretty--colors: map-merge($pretty--colors, $browsers);
+
+@import "~pretty-checkbox/src/pretty-checkbox.scss";
